<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.LogInFragment">


    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="241dp"
        android:layout_height="78dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextUsername"
        app:layout_constraintStart_toStartOf="@+id/editTextUsername"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsername"
        app:layout_constraintVertical_bias="0.077" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLogInWithGoogle"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_shape"
        android:shadowColor="@color/buttonShadowColor"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="10"
        android:text="@string/log_in_with_google"
        android:textColor="@color/buttonTextColor"
        app:layout_constraintEnd_toEndOf="@+id/buttonLogIn"
        app:layout_constraintStart_toStartOf="@+id/buttonLogIn"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogIn" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="245dp"
        android:layout_height="86dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.195" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLogIn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:background="@drawable/button_shape"
        android:shadowColor="@color/buttonShadowColor"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="10"
        android:text="@string/log_in"
        android:textColor="@color/buttonTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        app:layout_constraintVertical_bias="0.086" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSignUp"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:background="@drawable/button_shape"
        android:shadowColor="@color/buttonShadowColor"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="10"
        android:text="@string/sign_up"
        android:textColor="@color/buttonTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonLogIn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonLogIn"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogInWithGoogle"
        app:layout_constraintVertical_bias="0.15"/>

</androidx.constraintlayout.widget.ConstraintLayout>