<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/logInFragment">

    <fragment
        android:id="@+id/productsFragment"
        android:name="pl.edu.uj.ecommerce.Fragments.ProductsFragment"
        android:label="fragment_products"
        tools:layout="@layout/fragment_products" >
        <action
            android:id="@+id/action_productsFragment_to_cartFragment"
            app:destination="@id/cartFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popEnterAnim="@android:anim/fade_in" />
        <action
            android:id="@+id/action_productsFragment_to_logInFragment"
            app:destination="@id/logInFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popUpTo="@+id/logInFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_productsFragment_to_ordersFragment"
            app:destination="@id/ordersFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popEnterAnim="@android:anim/fade_in" />
        <action
            android:id="@+id/action_productsFragment_to_aboutAppFragment"
            app:destination="@id/aboutAppFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popEnterAnim="@android:anim/fade_in" />
        <action
            android:id="@+id/action_productsFragment_to_updateCustomerFragment"
            app:destination="@id/updateCustomerFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popEnterAnim="@android:anim/fade_in" />
        <action
            android:id="@+id/action_productsFragment_to_deleteAccountFragment"
            app:destination="@id/deleteAccountFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popEnterAnim="@android:anim/fade_in" />
        <action
            android:id="@+id/action_productsFragment_to_googleMapsFragment"
            app:destination="@id/googleMapsFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popEnterAnim="@android:anim/fade_in" />
    </fragment>
    <fragment
        android:id="@+id/logInFragment"
        android:name="pl.edu.uj.ecommerce.Fragments.LogInFragment"
        android:label="fragment_log_in"
        tools:layout="@layout/fragment_log_in" >

        <action
            android:id="@+id/action_logInFragment_to_productsFragment"
            app:destination="@id/productsFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popEnterAnim="@android:anim/fade_in" />
        <action
            android:id="@+id/action_logInFragment_to_registerFragment"
            app:destination="@id/registerFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popEnterAnim="@android:anim/fade_in" />
        <action
            android:id="@+id/action_logInFragment_to_adminHomeFragment"
            app:destination="@id/adminHomeFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popEnterAnim="@android:anim/fade_in" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="pl.edu.uj.ecommerce.Fragments.RegisterFragment"
        android:label="fragment_register"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_registerFragment_to_logInFragment"
            app:destination="@id/logInFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popUpTo="@+id/logInFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/aboutAppFragment"
        android:name="pl.edu.uj.ecommerce.Fragments.AboutAppFragment"
        android:label="fragment_about_app"
        tools:layout="@layout/fragment_about_app" >
        <action
            android:id="@+id/action_aboutAppFragment_to_productsFragment"
            app:destination="@id/productsFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popUpTo="@+id/productsFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/cartFragment"
        android:name="pl.edu.uj.ecommerce.Fragments.CartFragment"
        android:label="fragment_cart"
        tools:layout="@layout/fragment_cart" >
        <action
            android:id="@+id/action_cartFragment_to_buyFragment"
            app:destination="@id/buyFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popEnterAnim="@android:anim/fade_in" />
        <action
            android:id="@+id/action_cartFragment_to_productsFragment"
            app:destination="@id/productsFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popUpTo="@+id/productsFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/buyFragment"
        android:name="pl.edu.uj.ecommerce.Fragments.BuyFragment"
        android:label="fragment_buy"
        tools:layout="@layout/fragment_buy" >
        <action
            android:id="@+id/action_buyFragment_to_productsFragment"
            app:destination="@id/productsFragment"
            app:enterAnim="@anim/rotate"
            app:popUpTo="@+id/productsFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/ordersFragment"
        android:name="pl.edu.uj.ecommerce.Fragments.OrdersFragment"
        android:label="fragment_orders"
        tools:layout="@layout/fragment_orders" >
        <action
            android:id="@+id/action_ordersFragment_to_productsFragment"
            app:destination="@id/productsFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popUpTo="@+id/productsFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_ordersFragment_to_orderDetailsFragment"
            app:destination="@id/orderDetailsFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popEnterAnim="@android:anim/fade_in" />
    </fragment>
    <fragment
        android:id="@+id/orderDetailsFragment"
        android:name="pl.edu.uj.ecommerce.Fragments.OrderDetailsFragment"
        android:label="fragment_order_details"
        tools:layout="@layout/fragment_order_details" />
    <fragment
        android:id="@+id/updateCustomerFragment"
        android:name="pl.edu.uj.ecommerce.Fragments.UpdateCustomerFragment"
        android:label="UpdateCustomerFragment"
        tools:layout="@layout/fragment_update_customer">
        <action
            android:id="@+id/action_updateCustomerFragment_to_productsFragment"
            app:destination="@id/productsFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popUpTo="@id/productsFragment"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/deleteAccountFragment"
        android:name="pl.edu.uj.ecommerce.Fragments.DeleteAccountFragment"
        android:label="DeleteAccountFragment"
        tools:layout="@layout/fragment_delete_account">
        <action
            android:id="@+id/action_deleteAccountFragment_to_logInFragment"
            app:destination="@id/logInFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popUpTo="@id/logInFragment"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_deleteAccountFragment_to_productsFragment"
            app:destination="@id/productsFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popUpTo="@id/productsFragment"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/adminHomeFragment"
        android:name="pl.edu.uj.ecommerce.admin.AdminHomeFragment"
        android:label="fragment_admin_home"
        tools:layout="@layout/fragment_admin_home" >
        <action
            android:id="@+id/action_adminHomeFragment_to_adminCartFragment"
            app:destination="@id/adminCartFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popEnterAnim="@android:anim/fade_in" />
        <action
            android:id="@+id/action_adminHomeFragment_to_adminCustomerFragment"
            app:destination="@id/adminCustomerFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popEnterAnim="@android:anim/fade_in" />
        <action
            android:id="@+id/action_adminHomeFragment_to_adminOrderFragment"
            app:destination="@id/adminOrderFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popEnterAnim="@android:anim/fade_in" />
        <action
            android:id="@+id/action_adminHomeFragment_to_adminProductsFragment"
            app:destination="@id/adminProductsFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popEnterAnim="@android:anim/fade_in" />
        <action
            android:id="@+id/action_adminHomeFragment_to_logInFragment"
            app:destination="@id/logInFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popEnterAnim="@android:anim/fade_in"
            app:popUpTo="@id/logInFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/adminCartFragment"
        android:name="pl.edu.uj.ecommerce.admin.AdminCartFragment"
        android:label="fragment_admin_cart"
        tools:layout="@layout/fragment_admin_cart" />
    <fragment
        android:id="@+id/adminCustomerFragment"
        android:name="pl.edu.uj.ecommerce.admin.AdminCustomerFragment"
        android:label="fragment_admin_customer"
        tools:layout="@layout/fragment_admin_customer" />
    <fragment
        android:id="@+id/adminOrderFragment"
        android:name="pl.edu.uj.ecommerce.admin.AdminOrderFragment"
        android:label="fragment_admin_order"
        tools:layout="@layout/fragment_admin_order" />
    <fragment
        android:id="@+id/adminProductsFragment"
        android:name="pl.edu.uj.ecommerce.admin.AdminProductsFragment"
        android:label="fragment_admin_products"
        tools:layout="@layout/fragment_admin_products" />
    <fragment
        android:id="@+id/googleMapsFragment"
        android:name="pl.edu.uj.ecommerce.Fragments.GoogleMapsFragment"
        android:label="fragment_google_maps"
        tools:layout="@layout/fragment_google_maps" />
</navigation>